Adjusts in the getters of transactions